{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 889,
  "lineage": "c9e62895-468a-a81e-164d-82b229e4b3c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cfa1e69b2f5fadd3",
            "association_id": "eipassoc-0efdff8fbb34db239",
            "domain": "vpc",
            "id": "eipalloc-0cfa1e69b2f5fadd3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cfac0ae8c4e88019",
            "private_dns": "ip-192-168-0-64.ec2.internal",
            "private_ip": "192.168.0.64",
            "public_dns": "ec2-3-215-49-216.compute-1.amazonaws.com",
            "public_ip": "3.215.49.216",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01366ba527e96dff5",
            "association_id": "eipassoc-0ade75f83b251392d",
            "domain": "vpc",
            "id": "eipalloc-01366ba527e96dff5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06916910d7bf2dd07",
            "private_dns": "ip-192-168-1-246.ec2.internal",
            "private_ip": "192.168.1.246",
            "public_dns": "ec2-52-45-132-46.compute-1.amazonaws.com",
            "public_ip": "52.45.132.46",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:internet-gateway/igw-02a15a7a87bef228a",
            "id": "igw-02a15a7a87bef228a",
            "owner_id": "590183835677",
            "vpc_id": "vpc-0a094930dc224073c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183835677:loadbalancer/app/serverless-jenkins-on-ecs/323a174ef1d53e27",
            "arn_suffix": "app/serverless-jenkins-on-ecs/323a174ef1d53e27",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "serverless-jenkins-on-ecs-1054555025.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183835677:loadbalancer/app/serverless-jenkins-on-ecs/323a174ef1d53e27",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "serverless-jenkins-on-ecs",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04af25f3210251069"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09ee4b39a9d6c59d1"
              },
              {
                "subnet_id": "subnet-0e5e2caba2d0cbabc"
              }
            ],
            "subnets": [
              "subnet-09ee4b39a9d6c59d1",
              "subnet-0e5e2caba2d0cbabc"
            ],
            "vpc_id": "vpc-0a094930dc224073c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183835677:listener/app/serverless-jenkins-on-ecs/323a174ef1d53e27/3d177424d47f3448",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:590183835677:targetgroup/serverless-jenkins-on-ecs/0e3a83f035bef9ab",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183835677:listener/app/serverless-jenkins-on-ecs/323a174ef1d53e27/3d177424d47f3448",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:590183835677:loadbalancer/app/serverless-jenkins-on-ecs/323a174ef1d53e27",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183835677:targetgroup/serverless-jenkins-on-ecs/0e3a83f035bef9ab",
            "arn_suffix": "targetgroup/serverless-jenkins-on-ecs/0e3a83f035bef9ab",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183835677:targetgroup/serverless-jenkins-on-ecs/0e3a83f035bef9ab",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:590183835677:loadbalancer/app/serverless-jenkins-on-ecs/323a174ef1d53e27"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "serverless-jenkins-on-ecs",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a094930dc224073c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cfa1e69b2f5fadd3",
            "association_id": "eipassoc-0efdff8fbb34db239",
            "connectivity_type": "public",
            "id": "nat-0d6ef42a679d18c31",
            "network_interface_id": "eni-0cfac0ae8c4e88019",
            "private_ip": "192.168.0.64",
            "public_ip": "3.215.49.216",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e5e2caba2d0cbabc",
            "tags": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-1a"
            },
            "tags_all": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-1a"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01366ba527e96dff5",
            "association_id": "eipassoc-0ade75f83b251392d",
            "connectivity_type": "public",
            "id": "nat-055ab78c9b36fb562",
            "network_interface_id": "eni-06916910d7bf2dd07",
            "private_ip": "192.168.1.246",
            "public_ip": "52.45.132.46",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09ee4b39a9d6c59d1",
            "tags": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-1b"
            },
            "tags_all": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-1b"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f7e345c16d45a4da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d6ef42a679d18c31",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7e345c16d45a4da",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cdd76fe84693781e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-055ab78c9b36fb562",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cdd76fe84693781e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02a15a7a87bef228a",
            "id": "r-rtb-09ccb07e2e16d561d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ccb07e2e16d561d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:route-table/rtb-0f7e345c16d45a4da",
            "id": "rtb-0f7e345c16d45a4da",
            "owner_id": "590183835677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d6ef42a679d18c31",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-1a"
            },
            "tags_all": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a094930dc224073c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:route-table/rtb-0cdd76fe84693781e",
            "id": "rtb-0cdd76fe84693781e",
            "owner_id": "590183835677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-055ab78c9b36fb562",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-1b"
            },
            "tags_all": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a094930dc224073c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:route-table/rtb-09ccb07e2e16d561d",
            "id": "rtb-09ccb07e2e16d561d",
            "owner_id": "590183835677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a15a7a87bef228a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a094930dc224073c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e66ab9880d9b8b2a",
            "route_table_id": "rtb-0f7e345c16d45a4da",
            "subnet_id": "subnet-030fad59adfe6be23"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052b7fb9182b8b415",
            "route_table_id": "rtb-0cdd76fe84693781e",
            "subnet_id": "subnet-074036361f072a058"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0014a1995819923d6",
            "route_table_id": "rtb-09ccb07e2e16d561d",
            "subnet_id": "subnet-0e5e2caba2d0cbabc"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033e63d179bc256a9",
            "route_table_id": "rtb-09ccb07e2e16d561d",
            "subnet_id": "subnet-09ee4b39a9d6c59d1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:security-group/sg-04af25f3210251069",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b15fcf7eb4245bdf"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-04af25f3210251069",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "590183835677",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a094930dc224073c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:security-group/sg-087e191dbe812a2cf",
            "description": "Allow SSH traffic from jenkins controller",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087e191dbe812a2cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "590183835677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a094930dc224073c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_jenkins_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:security-group/sg-0313ec850d9c8b0bb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0313ec850d9c8b0bb",
            "ingress": [],
            "name": "ecs-jenkins-agents",
            "name_prefix": "",
            "owner_id": "590183835677",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a094930dc224073c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:security-group/sg-0b15fcf7eb4245bdf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0b15fcf7eb4245bdf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0313ec850d9c8b0bb"
                ],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04af25f3210251069"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ecs-jenkins-controller",
            "name_prefix": "",
            "owner_id": "590183835677",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a094930dc224073c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:security-group/sg-0fa7f7f219ddfc09c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fa7f7f219ddfc09c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b15fcf7eb4245bdf"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs",
            "name_prefix": "",
            "owner_id": "590183835677",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a094930dc224073c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "agent_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3081233546",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0313ec850d9c8b0bb",
            "security_group_rule_id": "sgr-080c2500436b3206e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_jenkins_agent",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8080,
            "id": "sgrule-3810942230",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b15fcf7eb4245bdf",
            "security_group_rule_id": "sgr-06b19749443793156",
            "self": false,
            "source_security_group_id": "sg-04af25f3210251069",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_service",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8080,
            "id": "sgrule-3958074304",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04af25f3210251069",
            "security_group_rule_id": "sgr-09965e237e50c86fd",
            "self": false,
            "source_security_group_id": "sg-0b15fcf7eb4245bdf",
            "timeouts": null,
            "to_port": 8080,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_service",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 2049,
            "id": "sgrule-3933710128",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fa7f7f219ddfc09c",
            "security_group_rule_id": "sgr-06c4c0774fbbf16bf",
            "self": false,
            "source_security_group_id": "sg-0b15fcf7eb4245bdf",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_service",
            "aws_security_group.efs",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-28527604",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04af25f3210251069",
            "security_group_rule_id": "sgr-0eef8c60b96ed9b58",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_agent_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 50000,
            "id": "sgrule-2842225621",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b15fcf7eb4245bdf",
            "security_group_rule_id": "sgr-0556267af49c53747",
            "self": false,
            "source_security_group_id": "sg-0313ec850d9c8b0bb",
            "timeouts": null,
            "to_port": 50000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_jenkins_agent",
            "aws_security_group.ecs_service",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "service_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1524651208",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b15fcf7eb4245bdf",
            "security_group_rule_id": "sgr-092a7525a13057965",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_service",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:subnet/subnet-030fad59adfe6be23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030fad59adfe6be23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183835677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-1a"
            },
            "tags_all": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-1a"
            },
            "vpc_id": "vpc-0a094930dc224073c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:subnet/subnet-074036361f072a058",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074036361f072a058",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183835677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-1b"
            },
            "tags_all": {
              "Name": "private-serverless-jenkins-on-ecs-us-east-1b"
            },
            "vpc_id": "vpc-0a094930dc224073c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:subnet/subnet-0e5e2caba2d0cbabc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5e2caba2d0cbabc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183835677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-serverless-jenkins-on-ecs-us-east-1a"
            },
            "tags_all": {
              "Name": "public-serverless-jenkins-on-ecs-us-east-1a"
            },
            "vpc_id": "vpc-0a094930dc224073c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:subnet/subnet-09ee4b39a9d6c59d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ee4b39a9d6c59d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183835677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-serverless-jenkins-on-ecs-us-east-1b"
            },
            "tags_all": {
              "Name": "public-serverless-jenkins-on-ecs-us-east-1b"
            },
            "vpc_id": "vpc-0a094930dc224073c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:vpc/vpc-0a094930dc224073c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-072aa85c329473744",
            "default_route_table_id": "rtb-0f1145f674fa469fc",
            "default_security_group_id": "sg-053663c4ed5c966e6",
            "dhcp_options_id": "dopt-0ae06282f75a6ccae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a094930dc224073c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1145f674fa469fc",
            "owner_id": "590183835677",
            "tags": {
              "Name": "serverless-jenkins-on-ecs"
            },
            "tags_all": {
              "Name": "serverless-jenkins-on-ecs"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183835677:security-group-rule/sgr-056ae023b79344b4c",
            "cidr_ipv4": "192.168.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-056ae023b79344b4c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-087e191dbe812a2cf",
            "security_group_rule_id": "sgr-056ae023b79344b4c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}